Bug#48841 : Ndb : DBUG_ASSERT after failure to begin schema trans in online alter table